Added Annotation for api/shop/ProductController
